--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "sample excalibur game",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no tests installed\" && exit 1",
+    "build": "webpack --config webpack.config.js --mode=production",
+    "build:dev": "webpack --config webpack.config.js --mode=development",
+    "watch": "webpack --config webpack.config.js --mode=development --watch",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +23,13 @@
   "bugs": {
     "url": "https://github.com/stickleprojects/excalibur-game-1/issues"
   },
-  "homepage": "https://github.com/stickleprojects/excalibur-game-1#readme"
+  "homepage": "https://github.com/stickleprojects/excalibur-game-1#readme",
+  "dependencies": {
+    "excalibur": "^0.21.0",
+    "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "typescript": "^3.4.1"
+  }
 }
