--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-  "name": "game1",
+  "name": "excalibur-webpack",
   "version": "1.0.0",
-  "description": "sample excalibur game",
+  "private": true,
+  "description": "a webpack starter for excaliburjs projects",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack",
+    "webpack-dev-server": "webpack-dev-server --env.mode development --open",
+    "dev": "npm run webpack-dev-server",
+    "start": "npm run dev",
+    "build:dev": "npm run webpack -- --env.mode development",
+    "build:prod": "npm run webpack -- --env.mode production"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/stickleprojects/excalibur-game-1"
+  "author": "Excalibur.js Team",
+  "license": "BSD-2-Clause",
+  "devDependencies": {
+    "@types/node": "11.9.4",
+    "clean-webpack-plugin": "1.0.1",
+    "compression-webpack-plugin": "2.0.0",
+    "file-loader": "3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "source-map-loader": "0.2.4",
+    "ts-loader": "5.3.3",
+    "typescript": "^3.3.3333",
+    "uglifyjs-webpack-plugin": "2.1.1",
+    "webpack": "4.29.5",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-server": "3.2.0",
+    "webpack-merge": "4.2.1"
   },
-  "keywords": [
-    "excalibur",
-    "2d"
-  ],
-  "author": "kieron",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stickleprojects/excalibur-game-1/issues"
-  },
-  "homepage": "https://github.com/stickleprojects/excalibur-game-1#readme"
+  "dependencies": {
+    "excalibur": "0.21.0"
+  }
 }
